# SauceEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  VSCODE_QUICKSTART.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: clang-format.yml  manage-pr-on-review.yml  mark-review-when-assign.yml  set-ipr-on-commit.yml
assets/: default-2.frag  default.frag  default.vert  pbr.frag  sauceeditor.icns  sauceengine.icns  scene.gltf
assets/models/: monkey_ball.gltf  sphere.gltf
include/animation/: AnimationProperties.hpp  CollisionDetection.hpp  DerivFunc.hpp  ODEsolver.h  ODEsolver.hpp  QPsolver.hpp
include/app/: BufferUtils.hpp  Camera.hpp  ClothSettings.hpp  Component.hpp  Entity.hpp  GraphicsPipeline.hpp  IBLGenerator.hpp  ImGuiRenderer.hpp  ImageUtils.hpp  Instance.hpp  Log.hpp  LogicalDevice.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelViewerRenderer.hpp  PhysicalDevice.hpp  PhysicsDemoSetup.hpp  RenderSurface.hpp  Renderer.hpp  SauceEngineApp.hpp  Scene.hpp  Settings.hpp  SwapChain.hpp  Texture.hpp  TextureCache.hpp  Vertex.hpp
include/app/components/: ClothComponent.hpp  DirectionalLightComponent.hpp  LightComponent.hpp  MeshRendererComponent.hpp  PointLightComponent.hpp  RigidBodyComponent.hpp  SpotLightComponent.hpp  TransformComponent.hpp
include/app/modeling/: ClothInfo.hpp  GLTFExporter.hpp  GLTFLoader.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelNode.hpp  PropertyValue.hpp  Texture.hpp  TextureCache.hpp  Transform.hpp
include/app/ui/: ImGuiComponent.hpp  ImGuiComponentManager.hpp
include/editor/: AABB.hpp  EditorApp.hpp  EditorCamera.hpp  OffscreenFramebuffer.hpp  SelectionManager.hpp  zip_file.hpp
include/editor/gizmos/: Gizmo.hpp  GizmoRenderer.hpp  RotateGizmo.hpp  ScaleGizmo.hpp  TranslateGizmo.hpp
include/editor/panels/: AssetBrowserPanel.hpp  EditorPanel.hpp  InspectorPanel.hpp  SceneHierarchyPanel.hpp  ViewportPanel.hpp
include/launcher/: AppLauncher.hpp  LauncherCatalog.hpp  PolyHavenClient.hpp  engineMainLoop.hpp  engineMainloop.hpp  launcherWindow.hpp  optionParser.hpp
include/modeling/: Camera.hpp  Manager.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  ModelProperties.hpp  material.hpp
include/physics/: BVH.hpp  Cloth.hpp  ClothCollisionGeneration.hpp  Collider.hpp  ContactInfo.hpp  SphereBVH.hpp  SphereCollider.hpp  Vertex.hpp  XPBD.hpp
include/physics/constraints/: BendConstraint.hpp  CollisionConstraint.hpp  Constraint.hpp  StretchConstaint.hpp  StretchConstraint.hpp
include/rendering/: Bloom.hpp  LightProperties.hpp  Lights.hpp  RenderProperties.hpp  SpotLightProperties.hpp  pbrPreProcessing.hpp
include/shared/: Object.hpp  Scene.hpp
include/utils/: Camera.hpp  EigenToGLM.hpp  Logger.hpp  Shader.hpp
shaders/: CMakeLists.txt  editor_grid.frag  editor_grid.vert  editor_lit.frag  editor_lit.vert  editor_unlit.frag  editor_unlit.vert  ibl_brdf_lut.slang  ibl_equirect_to_cube.slang  ibl_irradiance.slang  ibl_prefilter.slang  post_process.slang  postprocess.slang  shader.slang  shader_3d.slang  shader_3d.vert  shader_3d.vert.spv  shader_lights.slang  shader_pbr.slang  shadow_map.slang  shadow_map_omni.slang  skybox.slang  slang.spv  slang_3d.spv
src/: cloth_scene_smoke.cpp  glad.c  jenga_scene_builder.cpp  main.cpp  modeltest.cpp  modelviewer.cpp  xpbd_cloth_harness.cpp  xpbd_rigid_harness.cpp
src/animation/: AnimationProperties.cpp  CMakeLists.txt  CollisionDetection.cpp  DerivFunc.cpp  ODEsolver.cpp  QPsolver.cpp
src/app/: IBLGenerator.cpp  ImGuiRenderer.cpp  Log.cpp  ModelViewerRenderer.cpp  PhysicsDemoSetup.cpp  SauceEngineApp.cpp  Scene.cpp  Settings.cpp
src/app/components/: ClothComponent.cpp  DirectionalLightComponent.cpp  LightComponent.cpp  MeshRendererComponent.cpp  PointLightComponent.cpp  RigidBodyComponent.cpp  SpotLightComponent.cpp  TransformComponent.cpp
src/app/modeling/: GLTFExporter.cpp  GLTFLoader.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelNode.cpp  Texture.cpp  TextureCache.cpp  Transform.cpp
src/app/ui/: BulletText.cpp  Button.cpp  Checkbox.cpp  ChildWindow.cpp  CollapsingHeader.cpp  Columns.cpp  CustomTooltip.cpp  Group.cpp  ImGuiButton.cpp  ImGuiComponentManager.cpp  Image.cpp  ImageButton.cpp  LabelText.cpp  PlotHistogram.cpp  PlotLines.cpp  ProgressBar.cpp  RadioButton.cpp  SameLine.cpp  Separator.cpp  SliderAngle.cpp  Spacing.cpp  Text.cpp  TextColored.cpp  TextWrapped.cpp  Tooltip.cpp  TreeNode.cpp  Window.cpp
src/editor/: EditorApp.cpp  EditorCamera.cpp  SelectionManager.cpp  main.cpp
src/editor/gizmos/: GizmoRenderer.cpp  RotateGizmo.cpp  ScaleGizmo.cpp  TranslateGizmo.cpp
src/editor/panels/: AssetBrowserPanel.cpp  InspectorPanel.cpp  SceneHierarchyPanel.cpp  (+1 more)
src/launcher/: AppLauncher.cpp  CMakeLists.txt  LauncherCatalog.cpp  PolyHavenClient.cpp  engineMainloop.cpp  launcherWindow.cpp  optionParser.cpp
src/modeling/: CMakeLists.txt  Camera.cpp  Manager.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  ModelProperties.cpp  material.cpp  mesh.cpp  mesh.hpp
src/physics/: Cloth.cpp  ClothCollisionGeneration.cpp  RigidSolverShared.hpp  SphereBVH.cpp  SphereCollider.cpp  XPBD.cpp  XPBDContacts.cpp  XPBDRigidSolve.cpp
src/rendering/: BRDF.cpp  Bloom.cpp  CMakeLists.txt  LightProperties.cpp  Lights.cpp  RenderProperties.cpp  SpotLightProperties.cpp  pbrPreProcessing.cpp
src/shared/: CMakeLists.txt  Object.cpp  Scene.cpp
src/utils/: CMakeLists.txt  Camera.cpp  Logger.cpp  Shader.cpp
task-delegation/: index.html  script.js  styles.css
temp_scene_extract/: scene.gltf
test/: CMakeLists.txt  ModelLoader_Test.cpp
test/animation/: AnimationProperties_test.cpp  Bounding_test.cpp  CMakeLists.txt  CollissionDetection_test.cpp  DerivFuncTests.cpp  DerivFunc_test.cpp  ODEsolver_test.cpp  inertia_test.cpp
test/assets/: long_cube.gltf  stanford-bunny.gltf
test/launcher/: CMakeLists.txt  optionParser_test.cpp
test/modeling/: Camera_test.cpp  Manager_test.cpp  Mesh_test.cpp  ModelLoader_test.cpp
test/shared/: Logger_test.cpp
testScene/: jenga_tower.gltf  monkeyball_course.gltf  testScene.gltf
(+42 files in other folders)
